{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 18,
  "lineage": "f8c7b8fd-02a8-afea-0152-e6950d557263",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "bd-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e0fd79dd-e640-4532-af5b-7764f94cd58a/resourceGroups/bd-resources/providers/Microsoft.Network/networkInterfaces/bd-nic",
            "internal_domain_name_suffix": "nfugfax5wuauxb3urtqwwgotfh.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e0fd79dd-e640-4532-af5b-7764f94cd58a/resourceGroups/bd-resources/providers/Microsoft.Network/publicIPAddresses/bd-ip",
                "subnet_id": "/subscriptions/e0fd79dd-e640-4532-af5b-7764f94cd58a/resourceGroups/bd-resources/providers/Microsoft.Network/virtualNetworks/bd-network/subnets/bd-subnet"
              }
            ],
            "location": "eastus",
            "name": "bd-nic",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "bd-resources",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_public_ip.bd-ip",
            "azurerm_resource_group.bd-rg",
            "azurerm_subnet.bd-subnet",
            "azurerm_virtual_network.bd-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "bd-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e0fd79dd-e640-4532-af5b-7764f94cd58a/resourceGroups/bd-resources/providers/Microsoft.Network/networkSecurityGroups/bd-sg",
            "location": "eastus",
            "name": "bd-sg",
            "resource_group_name": "bd-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "bd-dev-rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.bd-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "bd-dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e0fd79dd-e640-4532-af5b-7764f94cd58a/resourceGroups/bd-resources/providers/Microsoft.Network/networkSecurityGroups/bd-sg/securityRules/bd-dev-rule",
            "name": "bd-dev-rule",
            "network_security_group_name": "bd-sg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "bd-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.bd-sg",
            "azurerm_resource_group.bd-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bd-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/e0fd79dd-e640-4532-af5b-7764f94cd58a/resourceGroups/bd-resources/providers/Microsoft.Network/publicIPAddresses/bd-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "bd-ip",
            "resource_group_name": "bd-resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.bd-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bd-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e0fd79dd-e640-4532-af5b-7764f94cd58a/resourceGroups/bd-resources/providers/Microsoft.Network/virtualNetworks/bd-network/subnets/bd-subnet",
            "name": "bd-subnet",
            "resource_group_name": "bd-resources",
            "virtual_network_name": "bd-network"
          },
          "dependencies": [
            "azurerm_resource_group.bd-rg",
            "azurerm_virtual_network.bd-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "bd-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e0fd79dd-e640-4532-af5b-7764f94cd58a/resourceGroups/bd-resources/providers/Microsoft.Network/virtualNetworks/bd-network/subnets/bd-subnet",
            "network_security_group_id": "/subscriptions/e0fd79dd-e640-4532-af5b-7764f94cd58a/resourceGroups/bd-resources/providers/Microsoft.Network/networkSecurityGroups/bd-sg",
            "subnet_id": "/subscriptions/e0fd79dd-e640-4532-af5b-7764f94cd58a/resourceGroups/bd-resources/providers/Microsoft.Network/virtualNetworks/bd-network/subnets/bd-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.bd-sg",
            "azurerm_resource_group.bd-rg",
            "azurerm_subnet.bd-subnet",
            "azurerm_virtual_network.bd-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "bd-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "82626869-b5ff-4b01-87b4-8ce16b19d32f",
            "id": "/subscriptions/e0fd79dd-e640-4532-af5b-7764f94cd58a/resourceGroups/bd-resources/providers/Microsoft.Network/virtualNetworks/bd-network",
            "location": "eastus",
            "name": "bd-network",
            "resource_group_name": "bd-resources",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/e0fd79dd-e640-4532-af5b-7764f94cd58a/resourceGroups/bd-resources/providers/Microsoft.Network/virtualNetworks/bd-network/subnets/bd-subnet",
                "name": "bd-subnet",
                "security_group": "/subscriptions/e0fd79dd-e640-4532-af5b-7764f94cd58a/resourceGroups/bd-resources/providers/Microsoft.Network/networkSecurityGroups/bd-sg"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.bd-rg"
          ]
        }
      ]
    }
  ]
}